Fix: Fix compile bugs.